素数探索プログラム更新